# Intelligent-IT-incident-prioritization-system

./: .gitignore  README.md  pyproject.toml
.github/workflows/: backend-ci.yml  backend.yml  ia_module-ci.yml  ia_module.yml
IA-module/: .gitignore  README.md  examples.py  predict.py  pyproject.toml  train.py
IA-module/config/: default.json
IA-module/docs/: ARQUITECTURA.md  INTEGRACION_DATASET.md  INTEGRATION.md  MODEL.md  seleccion_dataset.md
IA-module/models/: metadata.json  priority_classifier_v1.pkl  priority_classifier_v1_vectorizer.pkl
IA-module/reports/: training_config.json  training_report_20260503_124957.md  training_report_20260503_204852.md  training_report_20260504_221112.md  training_report_20260505_182410.md  training_report_20260505_201018.md
IA-module/src/: __init__.py  classifiers.py  data_processor.py  encoders.py  interfaces.py  merge_datasets.py  model_trainer.py  predictor.py  utils.py
IA-module/test/: examples.py  test_model.py
app_flutter/: pubspec.yaml
app_flutter/lib/: PROJECT_STRUCTURE.md  README.md  main.dart
app_flutter/lib/core/network/: api_client.dart
app_flutter/lib/core/router/: app_router.dart  go_router_config.dart
app_flutter/lib/core/theme/: app_theme.dart  theme_mode_provider.dart
app_flutter/lib/core/utils/: app_constants.dart  app_translations.dart  riverpod_providers.dart  url_opener_stub.dart  url_opener_web.dart
app_flutter/test/: widget_test.dart
app_flutter/test/core/network/: api_client_test.dart
app_flutter/test/helpers/: test_app.dart
backend/: .dockerignore  .env  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  test_endpoints.py
backend/cache/: y_a594116f7e631e60.npy
backend/config/: ml_default.json
backend/docker/: prometheus.yml
backend/docker/grafana/dashboards/: ai-metrics-dashboard.json  itsm-dashboard.json
backend/docs/: API_DOCUMENTATION.md  TESTING_MANUAL.md
backend/migrations/: env.py
backend/migrations/versions/: 3b3376bff780_initial.py
backend/models/: metadata.json
backend/models/encoder/: config.json  config_sentence_transformers.json  tokenizer_config.json
backend/reports/: training_config.json  training_report_20260508_200800.md  training_report_20260510_101059.md
backend/scripts/: __init__.py  entrypoint.py  entrypoint.sh  init_db.py  merge_datasets.py  seed_data.py
backend/scripts/ml/: predict.py  train.py
backend/src/: main.py
backend/src/application/: __init__.py
backend/src/application/ports/: __init__.py  i_ai_model.py  i_embedding_model.py  i_llm_client.py  i_notification_channel.py
backend/src/application/services/: __init__.py  ai_service.py  auth_service.py  metrics_service.py
backend/src/application/use_cases/ai/: __init__.py  get_incident_recommendations.py  search_similar_incidents.py
backend/src/application/use_cases/incidents/: __init__.py  classify_incident.py  create_incident.py  delete_incident.py  get_incident.py  list_incidents.py  update_incident.py
backend/src/application/use_cases/metrics/: __init__.py  get_overview_metrics.py  get_sla_metrics.py
backend/src/application/use_cases/users/: __init__.py  create_user.py  get_user.py  list_users.py  update_user.py
backend/src/domain/: __init__.py
backend/src/domain/entities/: __init__.py  base.py  comment.py  incident.py  incident_event.py  metric.py  user.py
backend/src/domain/repositories/: __init__.py
backend/src/domain/value_objects/: __init__.py  priority_level.py
backend/src/infrastructure/: __init__.py
backend/src/infrastructure/connectors/: __init__.py  base_connector.py  jira_connector.py  servicenow_connector.py
backend/src/infrastructure/database/: __init__.py  session.py
backend/src/infrastructure/database/models/: __init__.py  comment_model.py  incident_event_model.py  incident_model.py  incident_similarity_model.py  metric_model.py  user_model.py
backend/src/infrastructure/database/repositories/: __init__.py  comment_repository.py  event_repository.py  incident_repository.py  user_repository.py
backend/src/infrastructure/messaging/: __init__.py  event_handlers.py  redis_publisher.py  redis_subscriber.py
backend/src/infrastructure/ml/: __init__.py  _utils.py  classifiers.py  data_processor.py  embedding_adapter.py  encoders.py  ia_adapter.py  interfaces.py  model_trainer.py  predictor.py  vector_store.py
backend/src/presentation/: __init__.py
backend/src/presentation/api/: app.py
backend/src/presentation/api/middleware/: __init__.py  logging_middleware.py  rate_limit_middleware.py  trace_middleware.py
backend/src/presentation/api/routes/: auth.py  dependencies.py  incidents.py  metrics.py  users.py
backend/src/presentation/schemas/: __init__.py  auth.py  incident.py  metrics.py
backend/src/shared/: __init__.py  config.py  exceptions.py  logging.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_auth_api.py  test_database_connection.py  test_error_handling.py  test_incidents.py  test_metrics.py  test_repositories.py
backend/tests/ml/: test_models.py
backend/tests/unit/: test_docker_ci.py  test_main.py
backend/tests/unit/application/: test_ai_use_cases.py  test_ia_service_integration.py  test_services.py  test_use_cases.py
backend/tests/unit/domain/: test_base_entity.py  test_comment.py  test_entities.py  test_incident.py  test_incident_category.py  test_incident_event.py  test_incident_status.py  test_priority_level.py  test_priority_mapper.py  test_user.py
backend/tests/unit/infrastructure/: test_comment_repository.py  test_database_init.py  test_embedding_adapter.py  test_event_repository.py  test_ia_adapter.py  test_incident_repository.py  test_jira_connector.py  test_redis_publisher.py  test_redis_subscriber.py  test_servicenow_connector.py  test_session.py  test_user_repository.py  test_vector_store.py
backend/tests/unit/presentation/: test_middleware.py
docs/: Modelado.docx  Modelado.md  plan_sistema_priorizacion_incidentes_ia (1).md  plantilla.docx
stick-learn-IA/: 01_combinacion_datos.ipynb  02_nlp_tickets.ipynb
tools/: markdown_to_word.py
(+60 files in other folders)
