[project]
name = "intelligent-it-incident-prioritization-system"
version = "0.1.0"
description = ""
authors = [
    {name = "Jesus-MMM",email = "jesusmanuelmercadomachado@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "scikit-learn (>=1.8.0,<2.0.0)",
    "pandas (>=3.0.2,<4.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
