[project]
name = "ia-module"
version = "0.1.0"
description = "Modulo de IA para el backend de la aplicacion"
authors = [
    {name = "Jesus-MMM",email = "jesusmanuelmercadomachado@gmail.com"}
]
requires-python = ">=3.11, <3.14"
dependencies = [
    "sentence-transformers (>=5.4.1,<6.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "shap (>=0.51.0,<0.52.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
