[project]
name = "incident-prioritization-backend"
version = "0.1.0"
description = "Sistema Inteligente de Priorización de Incidentes IT"
readme = "README.md"
requires-python = ">=3.11, <3.15"
authors = [
    {name = "Jesus-MMM", email = "jesusmanuelmercadomachado@gmail.com"}
]
license = {text = "MIT"}

dependencies = [
    # Core Framework
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",

    # Database
    "sqlalchemy",
    "alembic",
    "aiosqlite",
    "psycopg2-binary",
    "asyncpg",

    # AI/ML (CPU-friendly versions)
    "scikit-learn",
    "numpy",
    "pandas",
    "joblib",
    "sentence-transformers",
    "lightgbm",
    "shap",

    # Cache & Queue
    "redis",

    # Security
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "python-multipart",

    # Utilities
    "loguru",
    "structlog",
    "python-dateutil",
    "httpx",
    "email_validator",
    "aiohttp (>=3.13.5,<4.0.0)",
    "ruff (>=0.15.12,<0.16.0)",
    "pytest",
    "tqdm"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-xdist",
    "ruff",
    "mypy",
    "black",
]
embeddings = [
    "sentence-transformers",
    "pgvector",
    "torch",
    "torchvision",
    "torchaudio",
]

[project.scripts]
app = "src.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "ANN"]
ignore = ["ANN101", "ANN102", "ANN401"]

[tool.ruff.lint]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "N814"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::pytest.PytestUnhandledThreadExceptionWarning",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
